ensure text remains visible during webfont load

--- a/public/style.css
+++ b/public/style.css
@@ -36,6 +36,7 @@
 /* ------------------------------------------------------------------------ */
 @font-face {
   font-family: 'HackerFiveTwo';
+  font-display: swap;
   src: url('HackerFiveTwoOpti-UltraBld.otf');
 }
 
